using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BossAttack : MonoBehaviour
{
    private enum BossPattern { None, Melee, Ranged, Dash }
    private BossPattern nextPattern = BossPattern.None;

    [Header("공격 범위")]
    public float meleeRange = 3f;
    public float rangedRange = 8f;
    public float meleeStopDistance = 3f;
    public float rangedStopDistance = 8f;

    [Header("쿨다운")]
    public float meleeCooldown = 2f;
    public float rangedCooldown = 3f;
    private float nextRangedAvailableTime = 0f;

    [Header("돌진 패턴")]
    public float dashSpeed = 10f;
    public float dashCooldown = 5f;
    public int dashDamage = 25;
    public float dashKnockback = 12f;
    public float dashStunDuration = 1.0f; // 벽 충돌 후 행동 불가 시간
    
    private bool isStunned = false;
    public float stunDuration = 0.5f;
    public float backOffDistance = 1f;

    [Header("근접 공격")]
    public int attackDamage = 20;
    public float knockbackPower = 8f;
    public Transform hitboxCenter;
    public Vector2 hitboxSize = new Vector2(2f, 1f);
    public LayerMask targetLayer;

    [Header("원거리 공격")]
    public GameObject missilePrefab;
    public Transform firePoint;

    [Header("카메라 흔들림")]
    public Cinemachine.CinemachineImpulseSource impulseSource;

    public BossChase bossChase;
    public Transform player;

    private Animator anim;
    private bool isAttacking = false;
    private bool isDashing = false;
    private bool canDash = true;
    private Vector2 dashDir;
    private BossPattern lastPattern = BossPattern.None;

    private Rigidbody2D rb;

    // 대쉬 관련 코루틴 추적
    private Coroutine dashPrepCoroutine;
    private Coroutine dashCooldownCoroutine;

    void Start()
    {
        anim = GetComponent<Animator>();
        rb = GetComponent<Rigidbody2D>();
        rb.constraints = RigidbodyConstraints2D.FreezeRotation;

        if (bossChase == null) bossChase = GetComponent<BossChase>();
        if (player == null)
        {
            GameObject p = GameObject.FindWithTag("Player");
            if (p != null) player = p.transform;
        }
    }

    void Update()
    {
        // 스턴 중이면 추격 비활성화 + 행동 중단
        if (isStunned)
        {
            if (bossChase != null && bossChase.enabled)
                bossChase.enabled = false;
            return;
        }

        // 돌진 중 이동 처리
        if (isDashing)
        {
            rb.MovePosition(rb.position + dashDir * dashSpeed * Time.fixedDeltaTime);
            return;
        }

        if (player == null || isAttacking) return;

        // 다음 패턴 결정
        DecideNextPattern();

        switch (nextPattern)
        {
            case BossPattern.Melee:
                if (Vector2.Distance(transform.position, player.position) <= meleeStopDistance)
                {
                    StartCoroutine(DoMeleeAttack());
                    nextPattern = BossPattern.None;
                }
                break;

            case BossPattern.Ranged:
                if (Vector2.Distance(transform.position, player.position) <= rangedStopDistance)
                {
                    StartCoroutine(DoRangedAttack());
                    nextPattern = BossPattern.None;
                }
                break;

            case BossPattern.Dash:
                DashPrep();
                nextPattern = BossPattern.None;
                break;
        }
    }


    // =================== 애니메이션 이벤트 ===================
    public void StopChase()
    {
        if (bossChase != null)
            bossChase.enabled = false;
    }

    public void ResumeChase()
    {
        if (bossChase != null)
            bossChase.enabled = true;
    }

    // =================== 근접 공격 ===================
    IEnumerator DoMeleeAttack()
    {
        isAttacking = true;
        anim.SetTrigger("Attack");
        yield return new WaitForSeconds(meleeCooldown);
        isAttacking = false;
    }

    public void PerformHit()
    {
        Collider2D[] hits = Physics2D.OverlapBoxAll(hitboxCenter.position, hitboxSize, 0f, targetLayer);
        foreach (Collider2D hit in hits)
        {
            if (hit.CompareTag("Player"))
            {
                PlayerHealth ph = hit.GetComponent<PlayerHealth>();
                if (ph != null)
                {
                    ph.TakeDamage(attackDamage, transform.position, knockbackPower);
                }
            }
        }
    }

    // =================== 원거리 공격 ===================
    IEnumerator DoRangedAttack()
    {
        isAttacking = true;
        anim.SetTrigger("RangedAttack");
        yield return new WaitForSeconds(rangedCooldown);
        isAttacking = false;
    }

    public void ShootMissile()
    {
        if (missilePrefab != null && firePoint != null && player != null)
        {
            GameObject missile = Instantiate(missilePrefab, firePoint.position, Quaternion.identity);
            Missile m = missile.GetComponent<Missile>();
            if (m != null)
                m.SetTargetDirection((player.position - firePoint.position).normalized);
        }
    }

    // =================== 돌진 공격 ===================
    public void DashPrep()
    {
        if (!canDash || isAttacking) return;
        dashPrepCoroutine = StartCoroutine(DashPrepCoroutine());
    }

    IEnumerator DashPrepCoroutine()
    {
        canDash = false;
        isAttacking = true;
        anim.SetTrigger("DashPrep");

        if (bossChase != null) bossChase.enabled = false;

        // 준비 시 바라본 방향으로 dashDir 고정
        dashDir = transform.localScale.x > 0 ? Vector2.right : Vector2.left;

        yield return new WaitForSeconds(2f); // 준비 애니메이션 길이
        StartDash();
    }

    public void StartDash()
    {
        if (!isAttacking) return;

        isDashing = true;
        anim.SetTrigger("Dash");
    }

    public void PerformDashHit()
    {
        if (!isDashing) return;

        Collider2D hit = Physics2D.OverlapCircle(transform.position, 1f, targetLayer);
        if (hit != null && hit.CompareTag("Player"))
        {
            PlayerHealth ph = hit.GetComponent<PlayerHealth>();
            if (ph != null)
                ph.TakeDamage(dashDamage, transform.position, dashKnockback);
        }
    }

    private void StopDash()
    {
        // 대쉬 관련 코루틴 정리
        if (dashPrepCoroutine != null)
        {
            StopCoroutine(dashPrepCoroutine);
            dashPrepCoroutine = null;
        }
        if (dashCooldownCoroutine != null)
        {
            StopCoroutine(dashCooldownCoroutine);
            dashCooldownCoroutine = null;
        }

        isDashing = false;
        isAttacking = false;

        anim.ResetTrigger("Dash");
        anim.ResetTrigger("DashPrep");
        anim.SetTrigger("EndDash");

        //  카메라 흔들림
        if (impulseSource != null)
            impulseSource.GenerateImpulse();

        StartCoroutine(DashStunCoroutine());
    }

    private IEnumerator DashStunCoroutine()
    {
        isStunned = true;

        // 보스 이동/추격 중지
        if (bossChase != null)
            bossChase.enabled = false;

        // 스턴 유지 시간
        yield return new WaitForSeconds(dashStunDuration);

        // 스턴 해제
        isStunned = false;

        // 스턴이 끝난 후에만 추격 복구
        if (bossChase != null)
            bossChase.enabled = true;

        // 쿨다운 시작
        dashCooldownCoroutine = StartCoroutine(DashCooldownCoroutine());
    }

    private IEnumerator StunAndBackOff(Vector2 knockbackDir)
    {
        if (isStunned) yield break;
        isStunned = true;

        // 돌진 중지
        isDashing = false;
        if (bossChase != null) bossChase.enabled = false;

        // 살짝 뒤로 밀어내기
        Vector3 backPos = transform.position - (Vector3)knockbackDir.normalized * backOffDistance;
        transform.position = backPos;

        // 스턴 유지
        yield return new WaitForSeconds(stunDuration);

        // 스턴 종료 후 Chase 재활성화
        if (bossChase != null) bossChase.enabled = true;
        isStunned = false;
    }

    private IEnumerator DashCooldownCoroutine()
    {
        canDash = false;
        yield return new WaitForSeconds(dashCooldown);
        canDash = true;
        dashCooldownCoroutine = null;
    }

    private void OnCollisionEnter2D(Collision2D collision)
    {
        if (!isDashing) return;

        if (collision.collider.CompareTag("Player"))
        {
            // 플레이어 데미지 + 넉백
            PlayerHealth ph = collision.collider.GetComponent<PlayerHealth>();
            if (ph != null)
                ph.TakeDamage(dashDamage, transform.position, dashKnockback);
        }
        else if (collision.collider.CompareTag("Wall"))
        {
            // 벽 충돌 시 뒤로 살짝 튕기기
            Vector2 backDir = -dashDir; // 현재 돌진 방향 반대
            rb.MovePosition(rb.position + backDir * backOffDistance);

            StopDash(); // EndDash 애니메이션 + 카메라 흔들림 처리
            Debug.Log("Dash stopped and boss bounced back from wall.");
        }
    }


    // =================== 패턴 결정 ===================
    void DecideNextPattern()
    {
        List<BossPattern> candidates = new List<BossPattern>();
        float distance = Vector2.Distance(transform.position, player.position);

        if (distance <= meleeRange)
            candidates.Add(BossPattern.Melee);
        if (distance <= rangedRange && Time.time >= nextRangedAvailableTime)
            candidates.Add(BossPattern.Ranged);
        if (canDash)
            candidates.Add(BossPattern.Dash);

        if (candidates.Count == 0)
        {
            nextPattern = BossPattern.None;
            return;
        }

        if (candidates.Count > 1 && candidates.Contains(lastPattern))
            candidates.Remove(lastPattern);

        int index = Random.Range(0, candidates.Count);
        nextPattern = candidates[index];
        lastPattern = nextPattern;

        if (nextPattern == BossPattern.Ranged)
            nextRangedAvailableTime = Time.time + rangedCooldown * 2f;
    }

    void OnDrawGizmosSelected()
    {
        if (hitboxCenter != null)
        {
            Gizmos.color = Color.red;
            Gizmos.DrawWireCube(hitboxCenter.position, hitboxSize);
        }

        Gizmos.color = Color.blue;
        Gizmos.DrawWireSphere(transform.position, meleeRange);

        Gizmos.color = Color.green;
        Gizmos.DrawWireSphere(transform.position, rangedRange);

        if (isDashing)
        {
            Gizmos.color = Color.yellow;
            Gizmos.DrawRay(transform.position, dashDir * 2f);
        }
    }
}
